30_applications/photos/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: photos
  labels:
    gateway.networking.k8s.io/public-routes: "true"
