30_applications/photos/immich_server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: photos
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: server
      app.kubernetes.io/instance: immich
  template:
    metadata:
      labels:
        app.kubernetes.io/name: server
        app.kubernetes.io/instance: immich
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:v3.3.1
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 2283
              protocol: TCP
            - name: monitoring
              containerPort: 8081
              protocol: TCP
          resources:
            requests:
              memory: "2Gi"
              cpu: "2"
            limits:
              memory: "8Gi"
              cpu: "8"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: library
              mountPath: /data/library
            - name: upload
              mountPath: /data/upload
            - name: encoded-video
              mountPath: /data/encoded-video
            - name: profile
              mountPath: /data/profile
            - name: thumbs
              mountPath: /data/thumbs
          startupProbe:
            httpGet:
              path: /api/server/ping
              port: http
            failureThreshold: 60
            periodSeconds: 5
          livenessProbe:
            failureThreshold: 30
            httpGet:
              path: /api/server/ping
              port: http
            periodSeconds: 60
            timeoutSeconds: 1
      volumes:
        - name: config
          secret:
            secretName: immich-server-config
        - name: library
          persistentVolumeClaim:
            claimName: immich-library
        - name: upload
          persistentVolumeClaim:
            claimName: immich-upload
        - name: encoded-video
          persistentVolumeClaim:
            claimName: immich-encoded-video
        - name: profile
          persistentVolumeClaim:
            claimName: immich-profile
        - name: thumbs
          persistentVolumeClaim:
            claimName: immich-thumbs
