30_applications/photos/immich_server_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-server
  namespace: photos
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
spec:
  parentRefs:
    - name: public
      namespace: ingress
      sectionName: https-wildcard
  hostnames:
    - "photos.${vals_info_cluster_domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: immich-server
          port: 3001
