30_applications/photos/immich_server_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-server
  namespace: photos
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ingress
      namespace: ingress
      sectionName: https
  hostnames:
    - "photos.${vals_info_cluster_domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 1h
      backendRefs:
        - group: ""
          kind: Service
          name: immich-server
          port: 3001
